# acfunCLI

./: README.md  pyproject.toml  requirements.txt
acfunsdk_cli/: __main__.py  ac_tui.py
acfunsdk_cli/page/: article.py  footer.py  header.py  index.py  sidebar.py  video.py
acfunsdk_cli/utils/: actool.py
