[tool.poetry]
name = "acfunsdk-cli"
version = "0.1.0"
description = "acfunsdk - command line"
license = "MIT"
authors = ["dolacmeo <dolacmeo@gmail.com>"]
maintainers = []
readme = "README.md"
homepage = "https://pypi.org/project/acfunsdk-cli/"
repository = "https://github.com/dolaCmeo/acfunsdk-cli"
documentation = "https://github.com/dolaCmeo/acfunsdk-cli"
keywords = ["acfun", "sdk", "acfunsdk", "unofficeical", "cli"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Chinese (Simplified)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: JavaScript",
    "Topic :: Education",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries",
]
packages = [{include = "acfunsdk_cli"}]


[tool.poetry.dependencies]
python = "^3.8"
acfunsdk = "^0.9.7"
rich = "^12.5"
click = "^8.1"
Pillow = "^9"
kdtree = "^0.16"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = 'aliyun.mirrors'
url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/dolaCmeo/acfunsdk-cli/issues"

[tool.poetry.scripts]
acfun = 'acfunsdk_cli.__main__:cli'
